[package]
name = "renderer"
version = "0.1.0"
authors = ["callumfairbairn <callum.fairbairn@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.1"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }